# travel-agency

./: .gitignore  CMakeLists.txt  README.md
assets/: city_map_full.txt
doc/: cpp.cls  report.tex
doc/figures/: figures.pptx
doc/sections/: appendices.tex  conclusion.tex  design.tex  experiments.tex  introduction.tex  preliminary.tex  showcase.tex
gui/: index.html
gui/css/: app.css
gui/js/: app.js  utils.js
include/: CityMap.hh  Const.hh  Journey.hh  LinkedList.hh  Solver.h  Solver.hh  travel_agency.h
py/: _travel_agency.py  agency_server.py  benchmark.py  main.py  travel_agency.py
src/: CityMap.cc  Journey.cc  Solver.cc  c_wrapper.cc
test/: test_city_map.cc  test_journey.cc  test_limited_time_min_risk_solver.cc  test_linked_list.cc  test_min_risk_spfa_solver.cc
test/assets/: city_map_1.txt  city_map_2.txt  city_map_cn.txt  city_map_simple.txt
